--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
             <!--Titles-->
             <div class="title col-12">
                 <h2 class="align-left mbr-fonts-style display-1">
-                    Our Contacts
+                    <br>Our Contacts
                 </h2>
                 
             </div>
@@ -144,7 +144,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="nsqG+p0/lnlTFzW7YtPt3NFK89iM85OaqKNeGKa5SVUAUPJ2kbC0VlRAd2GfJGEihexM4/7gQLiHC8X2AZhwYsjDERTvLMOmwZBlakoBOGp1RjjlWjRxH/a9luvazcTF">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xblICwND/aBbCEPyLAQ0Y2CzDqLLGcki7bRCki0NBtEE7yIalr1KaJBhOnIJybs04Eq6qGqIZhMUoy35ggMo7ofrCzpUHm1RG/nwzPeaCZaf2hh7EtHUhNCFoNY9F3UJ">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for reaching out</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
