--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
         <div class="navbar-brand">
             <span class="navbar-logo">
                 <a href="#">
-                    <img src="assets/images/nrlogo-132x134.jpg" alt="" title="" style="height: 5.3rem;">
+                    <img src="assets/images/nrlogo-132x134.jpg" alt="Handyman" title="Buckscounty" style="height: 5.3rem;">
                 </a>
             </span>
             <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Ranieri Handyman Services</a></span>
@@ -78,7 +78,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12 mx-auto mbr-form" data-form-type="formoid">
                 <!--Formbuilder Form-->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="66H4ryKwHMPrYnPHPVc0JkllMYtqLzB7xsgAqEIRD4s2b2qNoT147T/5ONcdhVpW3Fqr7m1lk1Roq7O+xKzEi7AxHCtBTMGnfKlDNymsJS04ZOI5tFprd0+hPb3EahO7">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="NNSeh79P9TjyFpX8de8yIOzshh/w8yairvx7y1chsCnKlv+8em1FugtbayxC3xV7rrFaEs+0LMXeJRA2S1VQaWsSJHXUD/3k7BGeEk9AQwe5EGz7VXVw8eCiB9zWBaXn">
                     <div class="form-row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out
                             our form!</div>
