--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
         <div class="navbar-brand">
             <span class="navbar-logo">
                 <a href="#">
-                    <img src="assets/images/nrlogo-132x134.jpg" alt="" title="" style="height: 5.3rem;">
+                    <img src="assets/images/nrlogo-132x134.jpg" alt="Handyman" title="Buckscounty" style="height: 5.3rem;">
                 </a>
             </span>
             <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="index.html">Ranieri Handyman Services</a></span>
