--- a/services.html
+++ b/services.html
@@ -92,7 +92,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong>General plumbing repairs<br>New toilets<br>Rebuilt toilets<br>Faucets and sinks<br>New shut off valves installed<br>Bath and shower caulking<br>Shower heads<br>Vanities<br>Garbage disposals<br>Drain cleaning<br>Hot water heaters</strong></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong>General plumbing repairs<br>New toilets<br>Rebuilt toilets<br>Faucets and sinks<br>New shut off valves installed<br>Bath and shower caulking<br>Shower heads<br>Vanities<br>Garbage disposals<br>Drain cleaning<br><br></strong></p>
                     </div>
                 </div>
 
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong>Door locks<br>Walls built or removed<br>Attic Stairs<br>Deck repairs and maintenance<br>Shelving<br>Windows / Doors installation &amp; repairs<br>Finished basements<br>Cabinetry<br>Trim and crown molding</strong></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong>Door locks<br>Walls built or removed<br>Attic Stairs<br>Deck repairs and maintenance<br>Shelving<br>Windows / Doors installation &amp; repairs<br>Finished basements<br>Cabinetry<br>Trim and crown molding</strong><br><strong>Deck Repair</strong><br><strong>Shed Repair</strong></p>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong>Shelves built<br>Pictures and mirrors hung<br>Dryer vent cleaning<br>Change hard to reach light bulbs<br>Blinds and curtains hung<br>Grab bars<br>Tower bars installed<br>Clean outs</strong></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong>Shelves built<br>Pictures and mirrors hung<br>Dryer vent cleaning<br>Change hard to reach light bulbs<br>Blinds and curtains hung<br>Grab bars<br>Tower bars installed<br>Clean outs</strong><br><strong>Furnitue Assembly</strong><br><strong>Blinds Installation</strong><br><strong>Closet Doors</strong><br><strong>Ceiling And Drywall Repair</strong><br><strong>Picture Hanging</strong><br><strong>Wall/Ceiling Painting</strong><br><strong>Power Washing Homes/Decks</strong><br><strong>Doorknob Installs</strong><br><strong>Lock Installation</strong><br><strong>Interior Painting</strong><br><strong>Shutter Painting</strong><br><strong>Gutter Cleaning</strong><br><strong>Plantings</strong><br><strong><br></strong></p>
                     </div>
                 </div>
 
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong>General electric repairs<br>&nbsp;Outlets and light switches<br>Ceiling fan installation<br>&nbsp;Light fixture installation<br>Electrical upgrades</strong></p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7"><strong>General electric repairs<br>Outlets and light switches<br>Ceiling fan installation<br>Light fixture installation<br>Electrical upgrades</strong></p>
                     </div>
                 </div>
             </div>
